# qc2ga-intersection

./: CMakeLists.txt  README.org
modules/: FindQC2GA.cmake
src/: conic.hpp  consts.hpp  intersections.hpp  qc2gaTools.hpp  qcga_tools.hpp  random.hpp  solve_conic_intersection.cpp  svg_export.hpp
